--- a/bin/edit/commands/public/index.html
+++ b/bin/edit/commands/public/index.html
@@ -1,1 +1,21 @@
-<h1>nc-edit</h1>
+<html>
+  <head>
+    <title>nc-edit</title>
+    <h1>nc-edit</h1>
+    <style>
+# line{
+}
+.line_container{
+   background:black;
+   color: white;
+   height:20px;
+   width: 30px;
+}
+    </style>
+  </head>
+  <body>
+    <div id="edit">
+    </div>
+    <script src="/js/client.js"></script>
+  </body>
+</html>
