quill is looking good so far

--- a/bin/edit/commands/public/index.html
+++ b/bin/edit/commands/public/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>nc-edit</title>
+    <link href="/shared/css/quill/1.3.7/quill.snow.css" rel="stylesheet">
+
     <h1>nc-edit</h1>
     <style>
 # line{
@@ -14,8 +16,9 @@
     </style>
   </head>
   <body>
-    <div id="edit">
+    <div id="editor" style="height:320px;">
     </div>
+    <script src="/shared/js/quill/1.3.7/quill.js"></script>
     <script src="/js/client.js"></script>
   </body>
 </html>
